--- a/uploadlts.html
+++ b/uploadlts.html
@@ -43,9 +43,13 @@
 										<li>
 											<a href="addlts.html"> <i class="fa fa-angle-right"></i>Add LTS Service</a>
 										</li>
-										<li class="active">
-											<a href="uploadlts.html"> <i class="fa fa-angle-right"></i>Upload LTS
+											<li class="active">
+											<a href="uploadlts.html"> <i class="fa fa-angle-right"></i>Add LTS
 												Logo</a>
+										</li>
+										<li>
+											<a href="ltslogos.html"> <i class="fa fa-angle-right"></i> LTS
+												Logos</a>
 										</li>
 									</ul>
 								</div>
@@ -80,7 +84,7 @@
 				<div class="b-b mb-10">
 					<div class="row">
 						<div class="col-sm-6 col-xs-12">
-							<h1 class="h3 m-0">DH LTS Services</h1>
+							<h1 class="h3 m-0">Nshift LTS Service</h1>
 						</div>
 					</div>
 				</div>
@@ -89,7 +93,7 @@
 						<section class="boxs">
 							<div class="boxs-header">
 								<h3 class="custom-font hb-blush">
-									<strong>Upload LTS Logo</strong>
+									<strong>Add LTS Logo</strong>
 								</h3>
 							</div>
 							<div class="boxs-body">
