--- a/addlts.html
+++ b/addlts.html
@@ -173,12 +173,14 @@
       $("#alertError").hide();
 
       var auth = localStorage.getItem("auth");
-      if (!auth) {
+      if (!auth || auth == "null" ) {
         auth = prompt("Please enter your authorization value:");
         getAuth();
       }
 
       function getAuth() {
+        localStorage.setItem("auth", auth);
+
         $.ajax({
           url: 'https://cors-djgq.onrender.com/https://www.unifaunonline.com/delivery-checkout/v1/lts-services/DH/',
           method: 'GET',
