--- a/addlts.html
+++ b/addlts.html
@@ -507,12 +507,15 @@
           defaultAddons: {
             type: "object",
             properties: {
-              defaultAddons: {
+              id: {
                 id: "array",
               },
               useIfServiceHasAgents: {
                 type: "boolean",
               },
+              dropPointTypes: {
+                      type: "array",
+                    },
             },
           },
 
@@ -544,7 +547,7 @@
         logoId: "",
         pudoId: "",
         pudoSystem: "NSHIFT",
-        postalCodeId: "",
+        postalCodeId: null,
         serviceVersion: "1.0",
         isCustomAgent: false,
         isCustomCarrier: false,
@@ -600,6 +603,11 @@
         savedLTSData.addons = normalizeProperties(savedLTSData.addons, 'fields', 'id');
         savedLTSData.addons = normalizeProperties(savedLTSData.addons, 'externalSystemAddons', 'externalSystemCode');
         event.preventDefault();
+        
+        if(savedLTSData.postalCodeId == ""){
+          savedLTSData.postalCodeId = null;
+      }
+      
         $.ajax({
           url: 'https://cors-djgq.onrender.com/https://www.unifaunonline.com/delivery-checkout/v1/lts-services',
           type: "POST",
