--- a/ltsservices.html
+++ b/ltsservices.html
@@ -16,10 +16,21 @@
   <link href="jsonToForm/jsonToForm.css" rel="stylesheet" type="text/css" />
 
   <style>
+ 
     input:read-only {
-      background-color: #f5f5f5;
-      border: 1px solid #ddd;
-      color: #888;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
+    color: #888;
+    height: 20px;
+    width: 40px;
+    margin-top: 10px;
+}
+.j-add-array-item{
+  color:#161616;
+}
+
+    .j-inline-help{
+      color: #2C2C2C;
     }
 
     .checkbox label,
@@ -39,10 +50,6 @@
 
     .j-remove-array-item {
       font-size: 15px;
-    }
-
-    .j-inline-help{
-      color: #171616;
     }
 
     .j-oject-title-row,
