--- a/uploadlts.html
+++ b/uploadlts.html
@@ -179,7 +179,7 @@
 				const form = $('#upload-form')[0];
 				const formData = new FormData(form);
 				$.ajax({
-					url: 'https://cors-anywhere.herokuapp.com/https://www.unifaunonline.com/delivery-checkout/v1/lts-logos',
+					url: 'https://cors-djgq.onrender.com/https://www.unifaunonline.com/delivery-checkout/v1/lts-logos',
 					type: 'POST',
 					headers: {
 						Authorization: 'Basic' + ' ' + auth
