--- a/addlts.html
+++ b/addlts.html
@@ -591,6 +591,7 @@
       var myEditor = $("#jsonEditor").jsonToForm({
         schema: LTSSchema,
         value: ltsData,
+        autoTrimValues:"false",
         afterValueChanged: function (newValue, newSchema) {
           if (
             typeof newValue !== "undefined" &&
