--- a/uploadlts.html
+++ b/uploadlts.html
@@ -114,7 +114,7 @@
 									<div class="form-group">
 										<label for="source-system">Source system:</label>
 										<input type="text" class="form-control" id="source-system" name="sourceSystem"
-											value="TS">
+											value="DH">
 									</div>
 									<div class="form-group">
 										<label for="logo-version">Logo version:</label>
