--- a/addlts.html
+++ b/addlts.html
@@ -239,6 +239,8 @@
 
             },
           },
+       
+
           sourceSystemCode: {
             title: "sourceSystemCode",
             type: "string",
@@ -246,7 +248,6 @@
               placeholderHint: "Enter value or leave empty.",
             },
           },
-
           serviceVersion: {
             title: "serviceVersion",
             type: "string",
@@ -301,6 +302,14 @@
               placeholderHint: "Enter value or leave empty.",
               inlineHint:
                 "Code of postal code data to associate with this service. See LTS - Postal Codes API for reference. If not provided the service will be valid for use based upon the routes field only.",
+            },
+          },
+
+          certifications: {
+            title: "certifications",
+            type: "string",
+            ui: {
+              inlineHint: "Valid values are: nordicswan",
             },
           },
 
@@ -503,6 +512,8 @@
             },
           },
 
+          
+
           addonAtLeastOne: {
             type: "object",
             properties: {
@@ -575,6 +586,7 @@
         externalJobs: [],
         externalSystemServices: [],
         fields: [],
+        certifications:[],
         addons: [],
         routes: [
           {
@@ -603,6 +615,7 @@
           }
           newValue.routes[0].from = convertToArray(newValue.routes[0].from);
           newValue.routes[0].to = convertToArray(newValue.routes[0].to);
+          newValue.certifications = convertToArray(newValue.certifications);
 
           $("#jsonValue").html(JSON.stringify(newValue, null, 2));
         },
@@ -660,6 +673,9 @@
           savedLTSData.sourceSystemCode = null;
         }
 
+        if (savedLTSData.certifications == "") {
+          savedLTSData.certifications = null;
+        } 
         if (
           savedLTSData.defaultAddons &&
           savedLTSData.defaultAddons[0] 
